# app_suivit

./: .gitignore  README.md  duck.db  orders.csv  pyproject.toml
src/: __main__.py
