[tool.poetry]
name = "app-suivit"
version = "0.1.0"
description = "app de suivit"
authors = ["hadrien <chicault.hadrien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
my-script = "src.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
